--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -62,4 +62,18 @@
   
  }
 
+
+ 
+ 
 }
+
+button[type=submit]{
+   background:#51ddfc;
+         margin-top: 15px;
+         width: 100%;
+         color: #fff;
+         border: none;
+         padding: 10px 0;
+         text-transform: uppercase;
+         border-radius: 5px;
+      }
