--- a/scss/components/_forms.scss
+++ b/scss/components/_forms.scss
@@ -19,4 +19,16 @@
    height:1px;
    overflow:hidden;
  }
+
+ .btn{
+   .default{
+      margin-top: 15px;
+      width: 100%;
+      color: #fff;
+      border: none;
+      padding: 10px 0;
+      text-transform: uppercase;
+      border-radius: 5px;
+   }
+ }
  }
