--- a/scss/components/_media-queries.scss
+++ b/scss/components/_media-queries.scss
@@ -1,10 +1,10 @@
 @media(max-width:$M-W){
-   
-   header.row{
-  flex-direction: column;
-      @include header($fx:block,$cn:space-around,$colm:null,$at:20px);
-      
-    
+  header.row{
+    flex-direction: column;
+    @include header($fx:block,$cn:space-around,$colm:null,$at:20px);
+  } 
+  
+  
    
       .img{
          &-logo{
@@ -17,20 +17,19 @@
       .nav {
          padding-left: 0;
          flex-basis: 100%;
-         display: flex;
-         flex-direction: column;
-       
-       
-       &-link {
-         text-align: center;
-         text-decoration: $gone-gone;
-         border-radius: 5px;
-         padding: 10px 0;
          display: block;
-         width: 100%;
-         transition: 
-           background-color .2s ease-in-out, 
-           color .2s ease-in-out;
+         margin:auto;
+         flex-direction: column;
+         
+         
+         &-link {
+           text-align: center;
+           flex-direction: column;
+        border-radius: 5px; 
+        padding: 10px 0;
+        display: block;
+        width: 100%;
+        transition: background-color .2s ease-in-out, color .2s ease-in-out;
        }
        
        &-link:hover {
@@ -38,8 +37,31 @@
          background-color: #58e1c1;
        }
       }
+
+
+      [class^=col] {
+        margin-top: 10px;
+        flex-basis: 100%;
+        min-height: 25px;
+        padding: 10px;
+        border-radius: 5px;
+    }
+
+      .col-6{
+        width:100%
+      }
+
+
+
+      .row {
+        flex-direction: column;
+        padding: 1em 10px;
+        display:flex;
+      }
+      
+     
 }
-}
+
 
 
 
@@ -73,80 +95,68 @@ header.row{
         align-items: center;
       }
       
-      [class^=col] + [class^=col] {
-        margin-left: 10px;
+  
+      
+      // .col-1 {
+      //   flex-basis: 8.33%;
+      // }
+      
+      // .col-2 {
+      //   flex-basis: 16.67%;
+      // }
+      
+      // .col-3 {
+      //   flex-basis: 25.00%;
+      // }
+      
+      // .col-4 {
+      //   flex-basis: 33.33%;
+      // }
+      
+      // .col-5 {
+      //   flex-basis: 41.67%;
+      // }
+      
+      // .col-6 {
+      //   flex-basis: 50.00%;
+      // }
+
+      [class^=col]{
+        width:100% !important
       }
       
-      .col-1 {
-        flex-basis: 8.33%;
-      }
+      // .col-7 {
+      //   flex-basis: 58.33%;
+      // }
       
-      .col-2 {
-        flex-basis: 16.67%;
-      }
+      // .col-8 {
+      //   flex-basis: 66.67%;
+      // }
       
-      .col-3 {
-        flex-basis: 25.00%;
-      }
+    
       
-      .col-4 {
-        flex-basis: 33.33%;
-      }
+      // .nav {
+      //   flex-direction: row;
+      //   justify-content: flex-end;
+      //   align-items: center;
+      // }
       
-      .col-5 {
-        flex-basis: 41.67%;
-      }
+      // .nav-link {
+      //   flex-basis: 100px;
+      // }
       
-      .col-6 {
-        flex-basis: 50.00%;
-      }
+      // .btn {
+      //   padding: 10px 30px;
+      // }
       
-      .col-7 {
-        flex-basis: 58.33%;
-      }
+      // .btn + .btn {
+      //   margin-left: 10px;
+      // }
       
-      .col-8 {
-        flex-basis: 66.67%;
-      }
-      
-      .col-9 {
-        flex-basis: 75.00%
-      }
-      
-      .col-10 {
-        flex-basis: 83.33%;
-      }
-      
-      .col-11 {
-        flex-basis: 91.67%;
-      }
-      
-      .col-12 {
-        flex-basis: 100%;
-      }
-      
-      .nav {
-        flex-direction: row;
-        justify-content: flex-end;
-        align-items: center;
-      }
-      
-      .nav-link {
-        flex-basis: 100px;
-      }
-      
-      .btn {
-        padding: 10px 30px;
-      }
-      
-      .btn + .btn {
-        margin-left: 10px;
-      }
-      
-      .logo {
-        margin-left: initial;
-        margin-right: initial;
-      }
+      // .logo {
+      //   margin-left: initial;
+      //   margin-right: initial;
+      // }
       
    }
 
