finished TTH-proj-4-pt-1

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,11 +1,6 @@
-@import '../scss/base/normalize';
-@import '../scss/utilities/variables';
-@import '../scss/utilities/mixins';
-@import '../scss/components/grid';
-@import '../scss/base/typography';
-@import '../scss/components/media-queries';
-@import '../scss/components/buttons';
-@import '../scss/components/forms';
-@import '../scss/components/navigation';
+@import './utilities/index';
+@import './base/index';
+@import './components/index';
+
 
 
